--- a/_includes/language_switcher.html
+++ b/_includes/language_switcher.html
@@ -1,7 +1,7 @@
 <ul class="language-switcher">
   {% for lang in site.data.languages %}
-    <li class=' header__nav__item {% if lang.code == page.lang %} is-active {% endif %}'>
-      <a href="{{ page.url | replace: /page.lang/, /lang.code/ }}">{{ lang.name }}</a>
-    </li>
+    <p>
+      <a href="{{ page.url | replace: /page.lang/, /lang.code/ }}" class="language-switcher {% if lang.code == page.lang %} is-active {% endif %}"> | {{ lang.name }} | </a>
+    </p>
   {% endfor %}
 </ul>
