--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -8,6 +8,11 @@
       <main class="main">
         <h1>{{ page.title }}</h1>
         <h3><i>{{ page.instrumentation }}</i></h3>
+        <img
+          alt="{{ page.title }}"
+          src="{{ site.baseurl }}/assets/images/{{ page.slug }}.png"
+          width="auto"
+        />
         {{ content }}
         <a href="{{ site.baseurl }}/{{ page.collection }}/projects">
           << {{ site.data.translations.back[page.collection] }}
