--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -227,3 +227,16 @@ img {
 }
 
 
+.language-switcher {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  font-size: 9px;
+}
+
+.language-switcher is-active {
+  font-weight: bold;
+  color: #333;
+}
