--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,13 +4,18 @@
 {% assign navigation_items = site.data.navigation.navigation_items.[current_language] %}
 
 {% unless menu_items %}
-  {% assign menu_items = site.data.navigation.navigation_items.[site.language_default] %}
+	{% assign menu_items = site.data.navigation.navigation_items.[site.language_default] %}
 {% endunless %}
 
 <nav>
 	{% for item in navigation_items %}
-		<a	href="{{ item.path | prepend: site.url }} " class='header__nav__item {% if page.url == item.path %} is-active {% endif %}' > 
+		{% assign menu_items = site.data.navigation.navigation_items.[site.language_default] %}
+		{% capture nav_url %}
+			{{ site.url }}/{{ current_language }}/{{ item.url_name }}
+		{% endcapture %}
+		<a	href="{{ nav_url }}" class='header__nav__item {% if page.url == item.path %} is-active {% endif %}' > 
 			{{ item.label }}
 		</a>
 	{% endfor %}
 </nav>
+
