--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
-  {% include head.html %}
-  <body>
-    <div class="layout">
-      {% include header.html %}
-      <main class="main">{{ content }}</main>
-      {% include footer.html %}
-    </div>
-  </body>
+
+	{% include head.html %}
+	
+	<body>
+		<div class="layout">
+			{% include header.html %}
+			<main class="main">
+				{{ content }}
+			</main>
+			{% include footer.html %}
+		</div>
+	</body>
+
 </html>
