--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,8 +2,7 @@
   <meta charset="utf-8" />
   <meta name='viewport' content='width=device-width, initial-scale=1'>
 
-  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Questrial" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Bellefair" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=EB+Garamond" rel="stylesheet">
   {% include analytics.html %}
   <title>{{ page.title }} | {{ site.author }}</title>
   <link rel="stylesheet" href="/assets/css/styles.css" />
