--- a/_sass/_settings.scss
+++ b/_sass/_settings.scss
@@ -1,6 +1,6 @@
 $zh-fonts: 'PingFang SC', 'Hiragino Sans GB', 'Droid Sans Fallback', 'Microsoft YaHei', 'Wenquanyi Micro Hei';
 $sans-serif-fonts: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Droid Sans', 'Helvetica Neue', #{$zh-fonts}, sans-serif;
-$serif-fonts: 'Palatino', 'Palatino Linotype', 'Book Antiqua', #{$zh-fonts}, serif;
+$serif-fonts: 'EB Garamond', 'Palatino Linotype', 'Book Antiqua', #{$zh-fonts}, serif;
 $monospaced-fonts: 'Menlo', 'Monaco', 'Consolas', "Courier New", monospace;
 
-$default-font-size: 13px;
+$default-font-size: 15px;
