--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -20,19 +20,9 @@ a {
 }
 
 .layout {
-  max-width: 100%;
-  padding: 0 25px; /* Reduce padding for smaller screens */
-}
-@media (min-width: 768px) {
-  .layout {
-    max-width: 1280px;
-  }
-}
-
-@media (max-width: 600px) {
-  .header {
-    padding: 15px 0;
-  }
+  max-width: 1280px;
+  margin: auto;
+  padding: 0 25px;
 }
 
 .header {
