--- a/_sass/_responsive.scss
+++ b/_sass/_responsive.scss
@@ -1,44 +1,86 @@
-@media screen and (max-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+// Responsive breakpoints
+$breakpoint-tablet: 768px;
+$breakpoint-mobile: 480px;
+$breakpoint-small: 375px;
 
-  .layout {
-    padding: 0 30px;
-  }
+// Tablet and below
+@media screen and (max-width: $breakpoint-tablet) {
+   html {
+      font-size: 16px;
+   }
+
+   .layout {
+      padding: 0 clamp(20px, 5vw, 30px);
+   }
+
+   // Adjust spacing for medium screens
+   .header__nav__item {
+      margin-right: 20px;
+   }
 }
 
-@media screen and (max-width: 480px) {
-  .main {
-    margin: 40px 0 100px;
-  }
+// Mobile and below
+@media screen and (max-width: $breakpoint-mobile) {
+   .main {
+      margin: 30px 0 80px;
+   }
 
-  .header {
-    padding: 30px 0;
-  }
+   .header {
+      padding: 25px 0;
+   }
 
-  .posts__date {
-    width: 100%;
-    margin-bottom: 8px;
-  }
+   .posts__date {
+      width: 100%;
+      margin-bottom: 8px;
+   }
 
-  .header__nav__item--title {
-    margin-right: 25px;
-  }
+   .header__nav__item--title {
+      margin-right: 20px;
+   }
 
-  .footer {
-    display: block;
-  }
+   .header__nav__item {
+      margin-right: 12px;
+   }
 
-  .footer__list--social {
-    margin-top: 10px;
-  }
+   .header__title {
+      margin-right: 25px;
+   }
 
-  .header__nav__item {
-    margin-right: 15px;
-  }
+   .footer {
+      display: block;
+      text-align: center;
+   }
 
-  .header__title {
-    margin-right: 30px;
-  }
+   .footer__list--social {
+      margin-top: 15px;
+      justify-content: center;
+   }
+}
+
+// Small mobile devices
+@media screen and (max-width: $breakpoint-small) {
+   html {
+      font-size: 15px;
+   }
+
+   .layout {
+      padding: 0 15px;
+   }
+
+   .header {
+      padding: 20px 0;
+   }
+
+   .header__nav__item {
+      margin-right: 10px;
+      font-size: 0.9em;
+   }
+
+   .header__title {
+      margin-right: 15px;
+   }
+
+   .main {
+      margin: 20px 0 60px;
+   }
 }
